2009-11-24  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c (is_file_exist): FIX: Check if the type of file is a regular file

	* src/ol_player_exaile03.c: FIX: Check status before getting music info or length for exaile 0.3

2009-11-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c (ol_osd_module_init_osd): Fix: translucent-on-mouse-over option does not work until the setting is changed after launched

2009-11-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_app.h: Add global interface to get the infomation of the application

	* src/ol_menu.c: Use the menu defined in glade file instead creating one manually
	Add player controlling menu items

	* src/ol_player_banshee.c: FIX: Next is now available on Banshee

2009-10-31  Tiger Soldier  <tigersoldi@gmail.com>

	* data/dialogs.glade: Improved UI for lrc location

	* src/ol_option.c (init_list): Make the list dragable to reorder.

2009-10-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: Add UI for the lrc path and filename

	* src/ol_lrc_parser.c: Fix: LRC file will not append some padding characters after setting its offset.

	* src/ol_player_mpris.c (ol_player_mpris_proxy_free): Issue 22: The function declaration is fixed

2009-10-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c : Adds LRC pattern support

	* src/ol_music_info.c: FIX: copy URI when copying music_info

	* src/ol_path_manage.c: Utilities to expand LRC path and filename patterns

	* src/ol_config_property.h: New config entry for lrc path and filename pattern

2009-10-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_banshee.c : All player operation is supported in Banshee
	* src/ol_player_songbird.c: All player operation is supported in Songbird
	* src/ol_player_exaile03.c: All player operation but seek is supported in Exaile 0.3
	* src/ol_player_amarok2.c : All player operation is supported in Amarok2
	* src/ol_player_audacious.c : All player operation is supported in Audacious